# kucoin-strategies

./: Cargo.toml
.cargo/: config.example.toml
src/: lib.rs  main.rs
src/kucoin/: constants.rs  mod.rs  request.rs  response.rs  task.rs
src/kucoin/account/: mod.rs  transfer.rs
src/kucoin/announcements/: mod.rs
src/kucoin/lending/: currency.rs  lend.rs  mod.rs  order.rs  redeem.rs
src/kucoin/trading/: mod.rs
src/kucoin/trading/spot/: currency.rs  mod.rs  order.rs  symbol.rs  ticker.rs
src/strategies/: mod.rs
src/strategies/strategy/: condition.rs  mod.rs  product.rs
src/strategies/strategy/actions/: action.rs  mod.rs
src/telegram/: constants.rs  keyboard.rs  mod.rs
src/telegram/callback_query/: announcements.rs  lending.rs  mod.rs  pair.rs
src/telegram/callback_query/strategy/: condition.rs  mod.rs  product.rs
src/telegram/callback_query/strategy/action/: mod.rs  order.rs  transfer.rs
src/telegram/message/: lending.rs  mod.rs  pair.rs
src/telegram/message/strategy/: condition.rs  mod.rs  product.rs
src/telegram/message/strategy/action/: lend.rs  mod.rs  order.rs  transfer.rs
